Fleshed out todo a little, more remote repo testing. It seems to work!

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,14 @@
-[ ] Get gitlab repo set up
+[X] Get gitlab repo set up
+NOTES:
+    git push origin main
+        pushes the most recent commit to branch "main" to the remote repo
+    git pull origin main
+        pulls the most recent version of main to the local repo
+    edit and commit as per the usual, just don't forget to commit! Have fun!
 [ ] Design discussion due Tuesday at 7pm
 [ ] Get back into python
+[ ] Learn vscode symbols/documentation habits
+[ ] Core hierarchy
+[ ] BST
+[ ] Mgr
+[ ] etc...
