--- a/TODO.txt
+++ b/TODO.txt
@@ -8,8 +8,9 @@ NOTES:
     *git pull origin main
         pulls the most recent version of main to the local repo
     edit and commit as per the usual, just don't forget to commit! Have fun!
-[ ] Design discussion due Tuesday at 7pm
-[ ] Get back into python
+[X] Get back into python
+[ ] Think up some member functions - Design discussion due Tuesday at 7pm
+[ ] Start working on pytest stuff
 [ ] Learn vscode symbols/documentation habits
 [ ] Core hierarchy
 [ ] BST
