--- a/TODO.txt
+++ b/TODO.txt
@@ -8,10 +8,11 @@ NOTES:
     *git pull origin main
         pulls the most recent version of main to the local repo
     edit and commit as per the usual, just don't forget to commit! Have fun!
-[ ] Design discussion due Tuesday at 7pm
-[ ] Get back into python
+[/] Design discussion due Tuesday at 7pm
+[/] Get back into python
+[ ] pytest!!!
 [ ] Learn vscode symbols/documentation habits
-[ ] Core hierarchy
+[/] Core hierarchy
 [ ] BST
 [ ] Mgr
 [ ] etc...
