--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
-[X] Get gitlab repo set up
-NOTES:
-    *"no free lunch" moment, have to pay gitlab to host, should set up rpi server
+GIT NOTES:
+    *have to pay gitlab to host, should maybe set up rpi server
     *generate and add an ssh key for each new device you want to access the repo
      from, using `ssh-keygen`
     *git push origin main
@@ -8,26 +7,18 @@ NOTES:
     *git pull origin main
         pulls the most recent version of main to the local repo
     edit and commit as per the usual, just don't forget to commit! Have fun!
-[X] Get back into python
-[x] Think up some member functions - Design discussion due Tuesday at 7pm
-[X] Start working on pytest stuff
 [ ] Learn vscode symbols/documentation habit
 [/] Core hierarchy
-    [ ] Grade (base)
-        [ ] GetLetter
-        [ ] GetPercentage
-        [ ] Passes
     [ ] Asgmt
         [ ] ?
-    [ ] Demo
-        [ ] GetLetter (overload)
-        [ ] Passes (overload) (???)
-        [ ] Retake (second attempts allowed - need to research IRL behavior)
+        [ ] ?
+        [ ] ?
     [ ] Exam
-        [ ] Practice (uses internal questions dict?)
+        [ ] ?
+        [ ] ?
         [ ] ?
 [ ] LLL
-[ ] Mgr
+[ ] Student
 [ ] BST
 [ ] parameterized pytests?
 
