Progress on core hierarchy, may abandon missedquestions thing, doesn't make sense for a grade object after all... Some progress toward linkedlist, looking pretty manageable

--- a/TODO.txt
+++ b/TODO.txt
@@ -14,10 +14,11 @@ GIT NOTES:
         [ ] ?
         [ ] ?
     [ ] Exam
-        [ ] ?
-        [ ] ?
-        [ ] ?
-[ ] LLL
+        [ ] Add         \
+        [ ] Remove       \__missedQuestions:Dict[str,str]
+        [ ] Edit         /
+        [ ] Practice?   /
+[/] LLL
 [ ] Student
 [ ] BST
 [ ] parameterized pytests?
