--- a/TODO.txt
+++ b/TODO.txt
@@ -1,25 +1,23 @@
+ASGMT4:
 GIT NOTES:
     *have to pay gitlab to host, should maybe set up rpi server
     *generate and add an ssh key for each new device you want to access the repo
-     from, using `ssh-keygen`
+     from using `ssh-keygen`
     *git push origin main
         pushes the most recent commit to branch "main" to the remote repo
     *git pull origin main
         pulls the most recent version of main to the local repo
     edit and commit as per the usual, just don't forget to commit! Have fun!
 [ ] Learn vscode symbols/documentation habit
-[/] Core hierarchy
+[Y] Core hierarchy
     [ ] Asgmt
+        [ ] Setup (override)
         [ ] ?
         [ ] ?
-        [ ] ?
-    [ ] Exam
-        [ ] Add         \
-        [ ] Remove       \__missedQuestions:Dict[str,str]
-        [ ] Edit         /
-        [ ] Practice?   /
 [/] LLL
 [ ] Student
-[ ] BST
 [ ] parameterized pytests?
 [ ] pytest fixtures?
+
+ASGMT5:
+[ ] BST
