--- a/TODO.txt
+++ b/TODO.txt
@@ -1,17 +1,6 @@
 ASGMT5:
-[X] BST
-[ ] Gradebook
-
-ASGMT4:
-[ ] parameterized pytests?
-[ ] pytest fixtures?
-[...] Learn vscode symbols/documentation habit
-GIT NOTES:
-    *have to pay gitlab to host, should maybe set up rpi server
-    *generate and add an ssh key for each new device you want to access the repo
-     from using `ssh-keygen`
-    *git push origin main
-        pushes the most recent commit to branch "main" to the remote repo
-    *git pull origin main
-        pulls the most recent version of main to the local repo
-    edit and commit as per the usual, just don't forget to commit! Have fun!
+[ ] Make sure all vars have getter/setter set up...
+[ ] Clean up comments/docs
+[ ] Maybe use Util.presentInterface in places where you forgot to...
+[ ] Maybe automate some tests, maybe learn how to use fixtures properly
+[ ] Done! Writeup + submit
